Allow last mov chunk to have an arbitrary number of samples.

Fixes ticket #673.